--- a/bio.qmd
+++ b/bio.qmd
@@ -6,4 +6,4 @@ title: "Short Course Presenters"
 |:--------------------------|:-------------------------------------------:|
 | ![](images/kelly-headshot.png){fig-alt="A headshot of Kelly, a woman with with long brown hair and bangs. Kelly smiles warmly while standing outdoors against a soft background of autumn tones. She wears tortoiseshell glasses, a purple sweater, a tidyverse-themed scarf, and dangling blue earrings, with arms confidently crossed." width="80%"} | **Dr. Kelly Bodwin** is an educator with over a decade of experience of teaching statistics and data science with R.  She has co-authored multiple R packages, including `flair` and `tidyclust`, and she is currently a consultant on an NSF Grant building infrastructure for the `data.table` package.  Her published applied research frequently involves manipulating large, in-memory data.  Examples include: performing large matrix computations on high-dimensional GWAS (genome-wide association studies) data; constructing temporal social networks at hundreds of time checkpoints for organizational membership data; and summarizing biodiversity metrics grouped over exhaustive permutations of taxa level organism counts and experimental conditions.  Above all, Dr. Bodwin’s educational goal is to lower barriers to entry for beginner and intermediate R users to benefit from modern tools and enable more efficient and effective data workflows.
 | ![](images/tyson-headshot-rounded.png){fig-alt="A headshot of Tyson, a man with short light brown hair. Tyson smiles confidently while standing in front of greenery and a blurred building background. He is wearing a grey patterned blazer over a blue and white checkered shirt, giving a professional and approachable appearance." width="80%"} | **Dr. Tyson Barrett** is a researcher and an applied statistician at Highmark Health and Utah State University. He has over 15 years of R package development and programming experience, including maintaining data.table (with over 600,000 monthly downloads) and 3 other published R packages. He is currently a consultant on an NSF Grant building infrastructure for the data.table package. In his research work, he regularly works with large datasets with millions of rows and hundreds of columns. He and his team use data.table, arrow, and duckDB daily to manage and analyze their data to efficiently and quickly communicate insights with stakeholders.  |
-| ![](images/jon.png){fig-alt="A headshot of Jon Keane, a nonbinary person with short brown hair and a goatee, looking off into the distance." width="80%" style="border-radius: 12px;"} | **Dr. Jonathan Keane** is an engineering leader at Posit, PBC with a background in data science and social science. They have been building data tooling for 15 years, including both R and Python data tools for scientific and data science computing. They are a member of the PMC for Apache Arrow, a maintainer of the Apache Arrow package, and the author of `dittodb`. They have also worked as a data scientist in a number of different industries (identify verification and fraud, market research, call centers, and social justice among other areas) using a wide range of tools to analyze, model, and use data at large enterprise scales. On top of building data tooling, they have a passion for teaching data scientists and others how to use data and tools to do their work and inform their decisions. |
+| ![](images/jon.png){fig-alt="A headshot of Jonathan Keane, a nonbinary person with short brown hair and a goatee, looking off into the distance." width="80%" style="border-radius: 12px;"} | **Dr. Jonathan Keane** is an engineering leader at Posit, PBC with a background in data science and social science. They have been building data tooling for 15 years, including both R and Python data tools for scientific and data science computing. They are a member of the PMC for Apache Arrow, a maintainer of the Apache Arrow package, and the author of `dittodb`. They have also worked as a data scientist in a number of different industries (identify verification and fraud, market research, call centers, and social justice among other areas) using a wide range of tools to analyze, model, and use data at large enterprise scales. On top of building data tooling, they have a passion for teaching data scientists and others how to use data and tools to do their work and inform their decisions. |
